fix params
